{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 69,
  "lineage": "a55a33fb-8f04-2c9d-e0d7-b25aada1f864",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "tcw_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011659404441:security-group/sg-03517de34a77730a3",
            "description": "Allow all inbound traffic",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "tcw_SG"
                ]
              }
            ],
            "id": "sg-03517de34a77730a3",
            "name": "tcw_SG",
            "tags": {
              "Name": "tcw_SG"
            },
            "vpc_id": "vpc-035624863a2ecf3c0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "available",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011659404441:vpc/vpc-035624863a2ecf3c0",
            "cidr_block": "192.172.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-06792ead22591b90b",
                "cidr_block": "192.172.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-3bbcbc41",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "tcw_VPC"
                ]
              }
            ],
            "id": "vpc-035624863a2ecf3c0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09b99141c266d7f1e",
            "owner_id": "011659404441",
            "state": "available",
            "tags": {
              "Name": "tcw_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tcw_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:011659404441:loadbalancer/app/test-lb-tf/46da897da6480289",
            "arn_suffix": "app/test-lb-tf/46da897da6480289",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-1337722887.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:011659404441:loadbalancer/app/test-lb-tf/46da897da6480289",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-03517de34a77730a3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07f8851982324faaf"
              },
              {
                "subnet_id": "subnet-0b5c5244db44f01d5"
              }
            ],
            "subnets": [
              "subnet-07f8851982324faaf",
              "subnet-0b5c5244db44f01d5"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-035624863a2ecf3c0",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_security_group.tcw_SG",
            "data.aws_subnet_ids.available_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tcw_alb_listeners",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:011659404441:listener/app/test-lb-tf/46da897da6480289/68c0a9d836639660",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:011659404441:targetgroup/tf-example-lb-tg/b86afd9609fd3d0f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:011659404441:listener/app/test-lb-tf/46da897da6480289/68c0a9d836639660",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:011659404441:loadbalancer/app/test-lb-tf/46da897da6480289",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tcw_alb",
            "aws_lb_target_group.tcw_tg",
            "data.aws_security_group.tcw_SG",
            "data.aws_subnet_ids.available_subnet",
            "data.aws_vpc.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tcw_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:011659404441:targetgroup/tf-example-lb-tg/b86afd9609fd3d0f",
            "arn_suffix": "targetgroup/tf-example-lb-tg/b86afd9609fd3d0f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:011659404441:targetgroup/tf-example-lb-tg/b86afd9609fd3d0f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-035624863a2ecf3c0"
          },
          "dependencies": [
            "data.aws_vpc.available"
          ]
        }
      ]
    }
  ]
}